k8s/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  labels:
    app: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: 696051617304.dkr.ecr.eu-north-1.amazonaws.com/booking-service:latest
          ports:
            - containerPort: 4001
