k8s/message-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
        - name: message
          image: 696051617304.dkr.ecr.eu-north-1.amazonaws.com/message-service:latest
          ports:
            - containerPort: 4003
