k8s/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
      nodePort: 30080
  type: NodePort
