k8s/message-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4003
      nodePort: 30083
  type: NodePort
