k8s/user-profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-profile-service
spec:
  selector:
    app: user-profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4002
      nodePort: 30082
  type: NodePort
